# DoomDeck

./: LICENSE  README.md
plugin/: package-lock.json  package.json  rollup.config.mjs
plugin/com.winlonghorn.doomdeck.sdPlugin/: manifest.json
plugin/src/: plugin.ts
plugin/src/actions/: doom.ts
plugin/src/renderer/: FrameRenderer.ts
src/: CMakeLists.txt  CaptureEngine.cpp  CaptureEngine.h  WindowFinder.cpp  WindowFinder.h  main.cpp
